RESOLVED FIXED 219726
[GTK] Fix EventSender wheel phase names
https://bugs.webkit.org/show_bug.cgi?id=219726
Summary [GTK] Fix EventSender wheel phase names
Lauro Moura
Reported 2020-12-09 22:25:47 PST
[GTK] Fix EventSender wheel phase names
Attachments
Patch (1.80 KB, patch)
2020-12-09 22:27 PST, Lauro Moura
no flags
Patch for landing (1.82 KB, patch)
2020-12-10 06:24 PST, Lauro Moura
no flags
Lauro Moura
Comment 1 2020-12-09 22:27:39 PST
Lauro Moura
Comment 2 2020-12-10 06:24:34 PST
Created attachment 415869 [details] Patch for landing
EWS
Comment 3 2020-12-10 07:02:33 PST
Committed r270624: <https://trac.webkit.org/changeset/270624> All reviewed patches have been landed. Closing bug and clearing flags on attachment 415869 [details].
Radar WebKit Bug Importer
Comment 4 2020-12-10 07:03:19 PST
Note You need to log in before you can comment on or make changes to this bug.