[GTK] Fix EventSender wheel phase names https://bugs.webkit.org/show_bug.cgi?id=219726

Reviewed by Carlos Garcia Campos.

It was causing the events to be sent with 0 phase as the momentum
phase switch overwrote it.

* WebKitTestRunner/gtk/EventSenderProxyGtk.cpp:
(WTR::EventSenderProxy::mouseScrollByWithWheelAndMomentumPhases):


Canonical link: https://commits.webkit.org/232291@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270624 268f45cc-cd09-0410-ab3c-d52691b4dbfc